--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div class = "epost">
         <br><br>
         <div class = "epost">
-            Imskjermen@gmail.com
+            imskjermen@gmail.com
         </div class = "epost" >
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </div class = "therest">
