--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
 <body>
     <div class="header">
         <div class="logo">
-            IM - skjermen 2024
+            <a href="index.html">
+                IM - skjermen 2024
+            </a>
         </div class = "logo">
 
         <div class = "navbar">
             <ul>
                 <li><a href="Informasjon.html">Info</a></li>
-                <li><a href="#about-us">Om oss</a></li>
+                <li><a href="om_oss.html">Om oss</a></li>
             </ul>
         </div class = "navbar">
     </div class = "header">
 
     <div class = "therest">
     
-    <br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br>
+
 
         <div class = "imskjerm2024">
             Send det dere ønsker skal vises på IM - skjermen 2024
@@ -38,7 +41,7 @@
             imskjermen@gmail.com
         </div class = "epost" >
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    </div class = "therest">
+
     
 </body>
 </html>
