--- a/Informasjon.html
+++ b/Informasjon.html
@@ -17,7 +17,7 @@
         <div class = "navbar">
             <ul>
                 <li><a href="Informasjon.html">Info</a></li>
-                <li><a href="#about-us">Om oss</a></li>
+                <li><a href="om_oss.html">Om oss</a></li>
             </ul>
         </div class = "navbar">
     </div class = "header">
@@ -39,6 +39,8 @@
             Vi tar gjerne imot tips og tilbakemeldinger til nettsiden. 
             <br><br>
             Ikke nøl med å kontakte oss om det er noe spørsmål.
+            <br><br>
+            E-post: imskjermen@gmail.com
         </div class = informasjonstekst>
         
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
