--- a/om_oss.html
+++ b/om_oss.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elvebakken IM - skjermen 2024 - Om oss</title>
-    <link rel="stylesheet" href="Informasjon.css">
+    <link rel="stylesheet" href="om_oss.css">
 </head>
 <body>
     <div class="header">
