--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section class="hero">
         <div class="container">
             <h1>Opplev IM</h1>
-            <p>Mesterverkene din skal bli sett.</p>
+            <p>Mesterverkene din skal bli sett</p>
             <button id="learn-more-btn" class="cta-btn" >Lær mer</button>
         </div>
     </section>
