--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; Drevet av Mads og Minh Anh fra IMIT vg2</p>
+            <p>&copy; Nettsiden er laget av MAKP og Mads Utigard-Eckey fra IMIT vg2 på Elvebakken</p>
         </div>
     </footer>
 </body>
