--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <section class="hero">
         <div class="container">
             <h1>Opplev IM</h1>
-            <p>Mesterverkene din skal bli sett</p>
+            <p>Mesterverkene din skal bli sett.</p>
+           
         </div>
     </section>
 
@@ -68,7 +69,7 @@
             <div class="faq-item">
                 <h3 class="faq-question">Hvor ofte oppdateres skjermen?</h3>
                 <div class="faq-answer">
-                    <p>Skjermen oppdateres rundt dagelig, noen ganger tar ting litt ekstra tid men aldri mer en noen få dager.</p>
+                    <p>Skjermen oppdateres rundt daglig, noen ganger tar ting litt ekstra tid men aldri mer en noen få dager.</p>
                 </div>
             </div>
         </div>
@@ -89,7 +90,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; Nettsiden er laget av MAKP og Mads Utigard-Eckey fra IMIT vg2 på Elvebakken</p>
+            <p>&copy; Drevet av Mads og Minh Anh fra IMIT vg2</p>
         </div>
     </footer>
 </body>
